# loudspeaker-jax

./: README.md  demo_framework.py  inspiration.md  pyproject.toml  pytest.ini  run_tests.py  test_basic_structure.py
docs/: implementation_plan.md  mathematical_foundations.md  project_status.md  tdd_methodology.md  technical_roadmap.md  testing_framework_guide.md
results/: comprehensive_test_report.json  test_summary.txt
src/: CITATION.md  CONTRIBUTING.md  FINAL_SUMMARY.md  LICENSE  RELEASE_NOTES.md  bayesian_inference.py  comprehensive_results_comparison.py  comprehensive_system_identification.py  comprehensive_testing.py  data_analysis.py  dynax_identification.py  final_results_analysis.py  fixed_comprehensive_analysis.py  gp_surrogate_modeling.py  ground_truth_model.py  loudspeaker_model.py  nonlinear_loudspeaker_model.py  nonlinear_models.jl  phase3_advanced_methods.py  phase3_demo.py  phase3_summary.py  phase3_working_methods.py  phase4_comparative_analysis.py  phase4_final_documentation.py  phase5_publication_preparation.py  quick_results_summary.py  research_report.md  results_summary.txt  run_comprehensive_identification.py  run_comprehensive_tests.py  setup_results_and_run_analysis.py  simple_comprehensive_analysis.py  simple_final_analysis.py  state_space_modeling.py  test_core_functionality.py  working_demo.py
src/examples/: loudspeaker_identification_demo.ipynb
src/results/: comprehensive_results.json  quick_results_summary.json
tests/: conftest.py  run_tests.py  test_comprehensive_framework.py  test_data_analysis.py  test_loudspeaker_model.py  test_system_identification.py
