
[project]
name = "loudspeaker-jax"
version = "0.1.0"
description = ""
authors = ["johtok"]

[tool.pixi.dependencies]
python = ">=3.9"
hydra-core = "^1.3.2"

[tool.pixi.feature.dev.dependencies]
pdoc3 = "^0.11.6"
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.lint]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
skip-magic-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
ignore_missing_imports = true
